editted some alignment issues

--- a/code/client/src/components/roompage/gameSettingsComponent.css
+++ b/code/client/src/components/roompage/gameSettingsComponent.css
@@ -41,6 +41,12 @@
     justify-content: center;
 }
 
+.player-input{
+    padding: 10px;
+    display: flex;
+    flex-direction: row;
+}
+
 /* Reference for game start button: https://getcssscan.com/css-buttons-examples */
 
 /* CSS */
